Stateful Checkpoint Serde