@@ -21,24 +21,35 @@ package org.apache.samza.checkpoint;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.samza.SamzaException;
+import org.apache.samza.storage.StateBackendFactory;
 
 
 public class StateCheckpointMarkerSerde<T extends StateCheckpointMarker> {
   private static final short PROTOCOL_VERSION = 1;
   private static final String SCM_SEPARATOR = ":";
-  private static final int PARTS_COUNT = 3;
+  private static final int PARTS_COUNT = 3; // protocol_version, serde_class, payload
 
-  public String serialize(T payload, StateCheckpointPayloadSerde<T> serde) {
-    StringBuilder builder = new StringBuilder();
-    builder.append(PROTOCOL_VERSION);
-    builder.append(SCM_SEPARATOR);
-    builder.append(serde.getClass().getName());
-    builder.append(SCM_SEPARATOR);
-    builder.append(serde.serialize(payload));
-
-    return builder.toString();
+  /**
+   * Serializes the {@link StateCheckpointMarker} according to the {@link StateCheckpointPayloadSerde} provided by
+   * the {@link StateBackendFactory}
+   * @param payload of type StateCheckpointMarker to be serialized into String
+   * @return serialized StateCheckpointMarker
+   */
+  public String serialize(T payload) {
+    try {
+      StateBackendFactory stateBackendFactory = (StateBackendFactory) Class.forName(payload.getFactoryName()).newInstance();
+      return serialize(payload, stateBackendFactory.getStateCheckpointPayloadSerde());
+    } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+      throw new SamzaException("State backend factory serde not found for class name: " + payload.getFactoryName(), e);
+    }
   }
 
+  /**
+   * Deserializes the serialized {@link StateCheckpointMarker} with the {@link StateCheckpointPayloadSerde} provided in
+   * the serializedSCM
+   * @param serializedSCM serialized version of a {@link StateCheckpointMarker}
+   * @return {@link StateCheckpointMarker} object deserialized
+   */
   public T deserializePayload(String serializedSCM) {
     if (StringUtils.isBlank(serializedSCM)) {
       throw new IllegalArgumentException("Invalid remote store checkpoint message: " + serializedSCM);
@@ -52,10 +63,15 @@ public class StateCheckpointMarkerSerde<T extends StateCheckpointMarker> {
     }
     String payloadSerdeClassName = parts[1];
     try {
-      StateCheckpointPayloadSerde<T> serde = (StateCheckpointPayloadSerde<T>) Class.forName(payloadSerdeClassName).newInstance();
+      StateCheckpointPayloadSerde<T> serde = (StateCheckpointPayloadSerde<T>) Class.forName(payloadSerdeClassName)
+          .getDeclaredConstructor().newInstance();
       return serde.deserialize(parts[2]);
-    } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+    } catch (Exception e) {
       throw new SamzaException("StateCheckpoint payload serde not found for class name: " + payloadSerdeClassName, e);
     }
+  }
+
+  private String serialize(T payload, StateCheckpointPayloadSerde<T> serde) {
+    return PROTOCOL_VERSION + SCM_SEPARATOR + serde.getClass().getName() + SCM_SEPARATOR + serde.serialize(payload);
   }
 }
